add landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="header">
         <div class="container">
@@ -19,8 +21,8 @@
             <div class="links">
                 <span class="icon">
                     <span></span>
-                    <span></span>
-                    <span></span>
+                <span></span>
+                <span></span>
                 </span>
                 <ul>
                     <li><a href="#services">Services</a></li>
@@ -31,5 +33,13 @@
             </div>
         </div>
     </div>
+
+    <div class="landing">
+        <div class="intro-text">
+            <h1>Hello there</h1>
+            <p>we are leon - super creative & minimal agency web template</p>
+        </div>
+    </div>
 </body>
+
 </html>
