add feature section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 1</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,6 +41,28 @@
             <p>we are leon - super creative & minimal agency web template</p>
         </div>
     </div>
+
+    <div class="features">
+        <div class="container">
+            <div class="feature">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h3>Tell us your idea</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem maiores voluptas dolores neque!</p>
+            </div>
+            <div class="feature">
+                <i class="fa-solid fa-earth-americas"></i>
+                <h3>Tell us your idea</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem maiores voluptas dolores neque!</p>
+            </div>
+            <div class="feature">
+                <i class="fa-solid fa-wand-magic-sparkles"></i>
+                <h3>Tell us your idea</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem maiores voluptas dolores neque!</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/all.min.js"></script>
 </body>
 
 </html>
