add services section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,59 @@
             </div>
         </div>
     </div>
+    <div class="services">
+        <div class="container">
+            <h2 class="special-heading">Services</h2>
+            <p>Don't be busy, be productive</p>
+            <div class="services-content">
+                <div class="col">
+                    <!-- start services -->
+                    <div class="service">
+                        <i class="fa-solid fa-palette"></i>
+                        <div class="service-text">
+                            <h3>Graphic Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nam nesciunt quisquam laudantium ex repellendus.</p>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-palette"></i>
+                        <div class="service-text">
+                            <h3>Graphic Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nam nesciunt quisquam laudantium ex repellendus.</p>
+                        </div>
+                    </div>
 
+                    <!-- end services  -->
+                </div>
+                <div class="col">
+                    <!-- start services -->
+                    <div class="service">
+                        <i class="fa-solid fa-palette"></i>
+                        <div class="service-text">
+                            <h3>Graphic Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nam nesciunt quisquam laudantium ex repellendus.</p>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-palette"></i>
+                        <div class="service-text">
+                            <h3>Graphic Design</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nam nesciunt quisquam laudantium ex repellendus.</p>
+                        </div>
+                    </div>
+                    <!-- end services  -->
+                </div>
+                <div class="col">
+                    <div class="image media-image">
+                        <img class="myimage" src="./img/img1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/all.min.js"></script>
 </body>
+
+</html>
 
 </html>
