--- a/index.html
+++ b/index.html
@@ -111,6 +111,35 @@
             </div>
         </div>
     </div>
+    <div class="portfolio">
+        <div class="container">
+            <h2 class="special-heading">Portfolio</h2>
+            <p>if you do it right, it will last forever</p>
+            <div class="portfolio-content">
+                <div class="card">
+                    <img src="./img/port1.jpg" alt="">
+                    <div class="info">
+                        <h3>Project here</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, nobis!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/port2.jpg" alt="">
+                    <div class="info">
+                        <h3>Project here</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, nobis!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/port1.jpg" alt="">
+                    <div class="info">
+                        <h3>Project here</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, nobis!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/all.min.js"></script>
 </body>
 
