add about section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,23 @@
             </div>
         </div>
     </div>
+    <div class="about">
+        <div class="container">
+            <h2 class="special-heading">About</h2>
+            <p>less is more work</p>
+            <div class="about-content">
+                <div class="image">
+                    <img src="./img/about.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus hic amet accusantium asperiores nam? Laudantium natus temporibus voluptate in atque!</p>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis minima reiciendis, quia vero culpa suscipit rerum sit laudantium non praesentium.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
     <script src="js/all.min.js"></script>
 </body>
 
