add contact section and footer

--- a/index.html
+++ b/index.html
@@ -157,6 +157,27 @@
             </div>
         </div>
     </div>
+    <div class="contact">
+        <div class="container">
+            <h2 class="special-heading">Contact</h2>
+            <p>we are born to create</p>
+            <div class="info">
+                <p class="label">Feel free to drop us a line at</p>
+                <a href="mailto:mohamed.azoz20010@gmail.com?subject=Contact" class="link">mohamed@mail.com</a>
+                <div class="social">
+                    <p>Find us on social networks</p>
+                    <div class="icons">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>&copy; 2023<span>Leno</span>All Rights Reserved</p>
+    </div>
     <script src="js/all.min.js"></script>
 </body>
 
