--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <h2 class="special-heading">Services</h2>
             <p>Don't be busy, be productive</p>
@@ -111,7 +111,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">Portfolio</h2>
             <p>if you do it right, it will last forever</p>
@@ -140,7 +140,7 @@
             </div>
         </div>
     </div>
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <h2 class="special-heading">About</h2>
             <p>less is more work</p>
@@ -157,7 +157,7 @@
             </div>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <h2 class="special-heading">Contact</h2>
             <p>we are born to create</p>
